align KA logo with right edge of hairline below - issue #33

--- a/static/css/kanji-alive.css
+++ b/static/css/kanji-alive.css
@@ -807,7 +807,7 @@ span.search{
 .logo {
 	position:relative;
 	top:-21px !important;
-	left:1100px !important;
+	left:1075px !important;
 }
 
 .logo img{
